--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Ahmed Bolarinwa",
   "license": "ISC",
   "dependencies": {
+    "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.13",
